--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -16,8 +16,9 @@ h1 {
   margin: 350px;
 }
 
-img {
-  width: 300px;
-  height: auto;
-  padding: 10px;
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 60%;
 }
